big updates to Jasmin